--- a/WindowExplorer/Sources/Controllers/MenuViewController/SettingsMenuController/SettingsMenu.storyboard
+++ b/WindowExplorer/Sources/Controllers/MenuViewController/SettingsMenuController/SettingsMenu.storyboard
@@ -10,7 +10,7 @@
             <objects>
                 <viewController id="jcr-A7-Ddu" customClass="SettingsMenuViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="ZeC-5C-8Vg">
-                        <rect key="frame" x="0.0" y="0.0" width="325" height="296"/>
+                        <rect key="frame" x="0.0" y="0.0" width="275" height="296"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9Ya-v4-Vaa">
@@ -88,6 +88,15 @@
                             <constraint firstItem="9Ya-v4-Vaa" firstAttribute="leading" secondItem="ZeC-5C-8Vg" secondAttribute="leading" constant="20" id="zEW-gW-1lc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="artifactsText" destination="TFb-oj-abs" id="ocA-fj-1lZ"/>
+                        <outlet property="eventsText" destination="ijp-h9-lPP" id="OgW-XW-sZF"/>
+                        <outlet property="labelsText" destination="9Ya-v4-Vaa" id="Mqw-ja-RJs"/>
+                        <outlet property="lightboxText" destination="Kmw-c1-nj7" id="wPM-Vh-6Js"/>
+                        <outlet property="miniMapText" destination="1rM-3a-ePD" id="Iu9-eh-x9m"/>
+                        <outlet property="organizationsText" destination="FBE-J8-oig" id="bXL-fi-ZTQ"/>
+                        <outlet property="schoolsText" destination="FnJ-sr-hYn" id="PMl-K7-X8V"/>
+                    </connections>
                 </viewController>
                 <customObject id="i6f-d4-UdN" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
